# Scrapify-Labs

./: .env.example  .gitignore  CREDENTIALS_AND_TESTING.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
public/: index.html
public/css/: style.css
public/js/: app.js
scripts/: seed_test_data.py
src/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  scraper_manager.py
src/api/: routes.py  webhooks.py
src/llm/: prompts.py  structurer.py
src/scrapers/: apify_instagram.py  apify_reddit.py  apify_twitter.py  base.py  civic.py  facebook.py  google_maps.py  india_civic.py  instagram.py  instagram_playwright.py  news.py  reddit.py  threads.py  twitter.py  twitter_playwright.py  youtube.py
tests/: test_api.py  test_models.py
